fixed the dl element spacing

--- a/powderhouse.org/styles/global.css
+++ b/powderhouse.org/styles/global.css
@@ -8,7 +8,7 @@ html {
 }
 
 p:not(:last-child) {
-	padding-bottom: calc(var(--gap)/2); 
+	padding-bottom: var(--gap); 
 }
 
 a {
@@ -20,11 +20,13 @@ img {
 }
 
 dl {
-	padding: calc(var(--gap)/2);
+	padding-left: var(--gap);
 }
 
 dt {
 	font-weight:bold;
 }
 
-dd {}
+dd {
+	padding-bottom:var(--gap);
+}
